--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,5 +12,5 @@
     </div>
 </form>
 <p>
-  <a href="/signup">Create an Account &rarr;</a>
+  <a href="/signup">Create an Account TEST TEST TEST&rarr;</a>
 <p>
