--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,16 @@
 <% include partials/backbone_templates %>
 
 <script>
-  $(function(){
+  $(function() {
     new Shortly();
   });
 </script>
 
-<script src='/client/app.js'></script>
+<script src='../public/dist/build.min.js'></script>
+
+
+
+<!-- <script src='/client/app.js'></script>
 <script src='/client/link.js'></script>
 <script src='/client/links.js'></script>
 <script src='/client/linkView.js'></script>
