--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,11 @@
   });
 </script>
 
-<script src='../public/dist/build.min.js'></script>
 
 
 
-<!-- <script src='/client/app.js'></script>
+
+<script src='/client/app.js'></script>
 <script src='/client/link.js'></script>
 <script src='/client/links.js'></script>
 <script src='/client/linkView.js'></script>
