--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 
 
 
-<script src='public/dist/build.min.js'></script>
+<script src='/dist/build.min.js'></script>
 
 
 <!--<script src='/client/link.js'></script>
